# AIcourse

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md
backend/: pyproject.toml
backend/app/: ai.py  auth.py  db.py  default_board.py  main.py  schemas.py
backend/tests/: test_app.py
docs/: DATABASE.md  PLAN.md
frontend/: AGENTS.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AIChatSidebar.tsx  AddCardForm.tsx  AuthGate.test.tsx  AuthGate.tsx  Board.tsx  Button.tsx  CardItem.tsx  CardModal.tsx  Column.tsx  Input.tsx  Modal.tsx  Textarea.tsx
frontend/src/data/: dummyData.ts
frontend/src/lib/: api.ts  auth.ts
frontend/src/store/: useBoardStore.test.ts  useBoardStore.ts
frontend/src/types/: index.ts
portfolio/: README.md  package-lock.json  package.json  tutorial.md
portfolio/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
portfolio/src/app/api/digital-twin/: route.ts
portfolio/src/components/: DigitalTwinChat.module.css  DigitalTwinChat.tsx  Hero.tsx
portfolio/src/lib/: careerProfile.ts  openrouter.ts
scripts/: start.bat  start.ps1  start.sh  stop.bat  stop.ps1  stop.sh
