[project]
name = "ai-course-backend"
version = "0.1.0"
description = "FastAPI backend scaffold for the AI course project management MVP"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.1,<1.0.0",
  "httpx>=0.28.1,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1,<9.0.0",
]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"
